Increase z-index on nav-items to fix overlapping issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ select{
 .nav-item{
 	background-color: var(--background-color) !important;
 	color: var(--text-color) !important;
+	z-index: 10;
 }
 
 #logo{
